added the floating guys from cam_rub_fan_club_the_game

--- a/index.html
+++ b/index.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
   <head>
+
+
+      
     <!--
     //This is a silly quacking sound. Fun if I want to annoy people
 
@@ -17,6 +20,7 @@
     <link rel="stylesheet" type="text/css" href="stylesheets/stylesheet.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/github-dark.css" media="screen">
     <link rel="stylesheet" type="text/css" href="stylesheets/print.css" media="print">
+    <script type "text/javascript" src="move.js"></script>
 
 
     <!-- Global site tag (gtag.js) - Google Analytics -->
@@ -34,7 +38,8 @@
     <title>Camille Moore's Personal Page</title>
   </head>
 
-  <body>
+
+    <body onLoad="init();">
 
 
     <div id="container">
