--- a/index.html
+++ b/index.html
@@ -80,7 +80,7 @@
 
 
 	<p> 
-    Writer, Scientist, Scavenger of human experience. Eye-contact enthusiast.
+    Writer, Scientist, Scavenger of human experience. Eye-contact avoider.
     </p>
 
               
