--- a/would_you_rather/index.html
+++ b/would_you_rather/index.html
@@ -1,20 +1,34 @@
 <!DOCTYPE html>
 <html>
-  <head>
-    <script type "text/javascript" src="rather.js"></script>
-    <title>Would You Rather!?</title>
-  </head>
-  <h1> Would You Rather!?
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <script type "text/javascript" src="rather.js"></script>
 
-    <input id="new question" type="button" value="new question" onclick="new_question();" />
+	<title>Would You Rather</title>
 
-  </h1>
+	<link rel="icon" href="favicon.ico" type="image/png" />
 
-    <body onLoad="new_question();">
-    <div id="question_box">
-      <p id="question"></p>
-    </div>
-
-
-  </body>
+	<link href="https://fonts.googleapis.com/css?family=Reem+Kufi|Roboto:300" rel="stylesheet">
+	<link href="https://use.fontawesome.com/releases/v5.13.1/css/all.css" rel="stylesheet">
+	<link rel="stylesheet" href="css/reset.css">
+	<link rel="stylesheet" href="css/styles.css">
+	<link rel="stylesheet" href="css/themes/indigo-white.css">
+	<!-- <link rel="stylesheet" href="css/themes/green-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/red-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/grey-white.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-indigo.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-blue.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-grey.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/white-red.css"> -->
+	<!-- <link rel="stylesheet" href="css/themes/yellow-black.css"> -->
+</head>
+  <body onLoad="new_question();">
+	<main>
+		<div class="intro">Would You Rather</div>
+		<div class="tagline" id="tagline"></div>
+		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
+	</main>
+</body>
 </html>
