--- a/would_you_rather/index.html
+++ b/would_you_rather/index.html
@@ -26,7 +26,7 @@
 </head>
   <body onLoad="new_question();">
 	<main>
-		<div class="intro">Would You Rather</div>
+		<div onclick='new_question()'class="intro">Would You Rather</div>
 		<div class="tagline" id="tagline"></div>
 		<!-- Find your icons from here - https://fontawesome.com/icons?d=gallery&s=brands -->
 	</main>
